src-ken&y/objects/Agreement_Line__c.object
<CustomObject>
    <fields>
        <fullName>Accounting_Segment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Accounting Segment</label>
        <referenceTo>Accounting_Default__c</referenceTo>
        <relationshipLabel>Agreement Lines</relationshipLabel>
        <relationshipName>Agreement_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agreement_Price__c</fullName>
        <label>Agreement Price</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Agreement__c</fullName>
        <label>Agreement</label>
        <referenceTo>Agreement__c</referenceTo>
        <relationshipLabel>Agreement Lines</relationshipLabel>
        <relationshipName>Agreement_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Alp_Identifier__c</fullName>
        <externalId>true</externalId>
        <label>Alp Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Autonumber__c</fullName>
        <displayFormat>{0000000000}</displayFormat>
        <label>Autonumber</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Billing_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Category</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Category__c.Type__c</field>
                <operation>equals</operation>
                <value>Billing</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Category__c</referenceTo>
        <relationshipLabel>Agreement Lines</relationshipLabel>
        <relationshipName>Agreement_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Charge_Type__c</fullName>
        <label>Charge Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TODO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <formula>Agreement__r.Currency__r.ISO_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_PO__c</fullName>
        <label>Customer PO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Site</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Customer__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Site</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Customer__c</referenceTo>
        <relationshipLabel>Agreement Lines</relationshipLabel>
        <relationshipName>Agreement_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Frequency_Number__c</fullName>
        <label>Frequency Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Frequency_Period__c</fullName>
        <label>Frequency Period</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Day</fullName>
                </value>
                <value>
                    <fullName>Week</fullName>
                </value>
                <value>
                    <fullName>Month</fullName>
                </value>
                <value>
                    <fullName>Quarter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fulfillment_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fulfillment Category</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Category__c.Type__c</field>
                <operation>equals</operation>
                <value>Fulfillment</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Category__c</referenceTo>
        <relationshipLabel>Agreement Lines (Fulfillment Category)</relationshipLabel>
        <relationshipName>Agreement_Lines1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Group_Number__c</fullName>
        <label>Group Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Item_Specification__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item Specification</label>
        <referenceTo>Item_Specification__c</referenceTo>
        <relationshipLabel>Agreement Lines</relationshipLabel>
        <relationshipName>Agreement_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Line_Total__c</fullName>
        <label>Line Total</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Line_Value__c</fullName>
        <formula>IF(NOT(ISBLANK(Line_Total__c)), Line_Total__c, if( (TEXT(Rate_Basis__c) == &apos;Flat&apos;),Agreement_Price__c * Occurrence_Count__c ,
Sales_Agreement_Quantity__c * Agreement_Price__c * Occurrence_Count__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Line Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Line__c</fullName>
        <description>Line number of the Agreement Line</description>
        <label>Line</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>List_Price__c</fullName>
        <label>List Price</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Margin_Cost__c</fullName>
        <label>Deprecate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Next_Billing_Date__c</fullName>
        <label>Next Billing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Occurrence_Count__c</fullName>
        <label>Occurrence Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Occurrence__c</fullName>
        <label>Occurrence</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Immediate</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Annually</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parent_Agreement_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Agreement Line</label>
        <referenceTo>Agreement_Line__c</referenceTo>
        <relationshipLabel>Agreement Lines</relationshipLabel>
        <relationshipName>Agreement_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Name__c</fullName>
        <formula>Parent_Agreement_Line__r.Product__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_Type__c</fullName>
        <label>Price Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Recurring</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pricebook__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pricebook</label>
        <referenceTo>Pricebook__c</referenceTo>
        <relationshipLabel>Agreement Lines</relationshipLabel>
        <relationshipName>Agreement_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pricing_UOM_Every__c</fullName>
        <formula>Pricing_UOM__r.Every__c</formula>
        <label>Pricing UOM Every</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pricing_UOM_Recurrence__c</fullName>
        <formula>TEXT(Pricing_UOM__r.Recurrence__c)</formula>
        <label>Pricing UOM Recurrence</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_UOM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pricing UOM</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>UOM__c.Type__c</field>
                <operation>equals</operation>
                <value>Time</value>
            </filterItems>
            <infoMessage>Pricing UOM must be time based</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>UOM__c</referenceTo>
        <relationshipLabel>Agreement Lines (Pricing UOM)</relationshipLabel>
        <relationshipName>Agreement_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Description__c</fullName>
        <formula>Product__r.Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Reference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Reference</label>
        <referenceTo>Cross_Reference__c</referenceTo>
        <relationshipLabel>Agreement Lines</relationshipLabel>
        <relationshipName>Agreement_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Configurable</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>Agreement Lines</relationshipLabel>
        <relationshipName>Agreement_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rate_Basis__c</fullName>
        <label>Rate Basis</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Flat</fullName>
                </value>
                <value>
                    <fullName>Quantity</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reason Code</label>
        <referenceTo>Reason_Code__c</referenceTo>
        <relationshipLabel>Agreement Lines</relationshipLabel>
        <relationshipName>Agreement_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Remaining_Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Remaining Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Revised_Agreement_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Revised Agreement Line</label>
        <referenceTo>Agreement_Line__c</referenceTo>
        <relationshipLabel>Agreement Lines (Revised Agreement Line)</relationshipLabel>
        <relationshipName>Agreement_Lines1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Revised__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Revised</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Revision_Approval_date__c</fullName>
        <label>Revision Approval date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Revision_Number__c</fullName>
        <label>Revision Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Revision_Status__c</fullName>
        <label>Revision Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Revised</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Agreement_Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Agreement Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ship_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship To</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Customer__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Ship_To</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Customer__c</referenceTo>
        <relationshipLabel>Agreement Lines (Ship To)</relationshipLabel>
        <relationshipName>Agreement_Lines1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sold_Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sold Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Total_Agreement_Quantity__c</fullName>
        <label>Total Agreement Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UOM__c</fullName>
        <formula>Product__r.Selling_UOM__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UOM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Agreement_Line__c</fullName>
        <description>This field is used to validate if the Agreement lines are unique for each Agreement. The value contains concatenation of Agreement__c.Id and Line__c</description>
        <label>Unique Agreement Line</label>
        <length>60</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Unit_Cost__c</fullName>
        <label>Unit Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Updatable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Updatable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Usage_Based__c</fullName>
        <formula>Product__r.Usage_Based__c</formula>
        <label>Usage-Based</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Variation_Percentage__c</fullName>
        <formula>ABS(IF(List_Price__c &gt; 0,
    (List_Price__c - Agreement_Price__c ) * 100/ List_Price__c, 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Variation Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Agreement Line</label>
    <nameField>
        <label>Agreement Line</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agreement Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Agreement_line_end_date_outside_agreem</fullName>
        <active>true</active>
        <description>End date cannot be less than Agreement start date and cannot be more than Agreement End Date.</description>
        <errorConditionFormula>(ISNEW()||
ISCHANGED(End_Date__c))
&amp;&amp;(OR(
(DATEVALUE(End_Date__c)) &gt; (DATEVALUE(Agreement__r.End_Date__c)),
(DATEVALUE(End_Date__c)) &lt; (DATEVALUE(Agreement__r.Start_Date__c))
))</errorConditionFormula>
        <errorMessage>End date cannot be less than Agreement start date and cannot be more than Agreement End Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Agreement_line_start_date_outside_agreem</fullName>
        <active>true</active>
        <description>Start date cannot be less than Agreement start date and cannot be more than Agreement Start Date.</description>
        <errorConditionFormula>(ISNEW()||
ISCHANGED(Start_Date__c))
&amp;&amp;
(OR(
(DATEVALUE(Start_Date__c)) &lt; (DATEVALUE(Agreement__r.Start_Date__c)),
(DATEVALUE(Start_Date__c)) &gt; (DATEVALUE(Agreement__r.End_Date__c )))
)</errorConditionFormula>
        <errorMessage>Start date cannot be less than Agreement start date and cannot be more than Agreement End Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_Change_line_Of_approved_agreement</fullName>
        <active>true</active>
        <description>Agreement Lines cannot be changed after Agreement is Approved.</description>
        <errorConditionFormula>AND(
ISPICKVAL(Agreement__r.Status__c ,&apos;Approved&apos;),
(Updatable__c = false),
NOT(LastModifiedDate &lt;&gt; LastModifiedDate),
OR(
NOT(ISCHANGED(Updatable__c))),
OR(
NOT(ISCHANGED(Sold_Quantity__c))),
OR(
NOT(ISCHANGED(Remaining_Quantity__c)))
)</errorConditionFormula>
        <errorMessage>Agreement lines cannot be changed after agreement is approved.Please use agreement revision .</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_add_rental_agreement_line</fullName>
        <active>true</active>
        <errorConditionFormula>AND (ISPICKVAL(Price_Type__c, &apos;Recurring&apos;) ,
 NOT(ISPICKVAL(Product__r.Item__r.Fulfillment_Source__c, &apos;Inventory&apos;))
)</errorConditionFormula>
        <errorMessage>You cannot create recurring agreement lines for items with a non-inventory fulfillment source</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_product_agreementline</fullName>
        <active>true</active>
        <description>Product is Required</description>
        <errorConditionFormula>ISNULL(Product__c)||ISBLANK(Product__c)</errorConditionFormula>
        <errorMessage>Product is Required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>cannot_add_line_with_sale_and_rent_UOM</fullName>
        <active>true</active>
        <description>Validation rule to prevent users from creating agreement lines of type sale with pricing uom &apos;rental&apos; ie., uom of type &apos;Time&apos;</description>
        <errorConditionFormula>AND( ISPICKVAL(Price_Type__c, &apos;Sales&apos;),
 ISPICKVAL( Pricing_UOM__r.Type__c , &apos;Time&apos;) )</errorConditionFormula>
        <errorMessage>You cannot create sales agreement lines for items with a rental unit of measure</errorMessage>
    </validationRules>
</CustomObject>